--- a/rust_html_macros/Cargo.toml
+++ b/rust_html_macros/Cargo.toml
@@ -26,6 +26,8 @@ syn = {version="2.0", features=["full"]}
 quote = "1.0"
 proc-macro2 = "1.0.92"
 litrs = "0.4.1"
+html5ever = { version = "0.29.0"}
+tendril = "0.4.3"
 scraper = "0.21.0"
 
 [dev-dependencies]
